--- a/aboutus.html
+++ b/aboutus.html
@@ -29,9 +29,9 @@
 
 <div class="jumbotron">
 <h1>Tech T Repairs</h1>
-<p>We are Tech T Repairs, we are a small independantly run business carrying out repair & upgrade work on Laptops and Mobile phones, we offer our services in and around Buckinghamshire area. with over 5 years experience, a quick turn around time and reasonably priced!<br>
+<p>We are Tech T Repairs, we are a small independantly run business carrying out repair & upgrade work on Laptops and Mobile phones, we offer our services in and around Buckinghamshire area. with a quick turn around time and reasonable prices!<br>
 
-<br>All our technicians are experienced in repairing and diagnosing problems with both Mobile phones and Computers/Laptops, over 5 and half years experience in dealing with iPhones and Android devices. 
+<br>All our technicians are experienced in repairing and diagnosing problems with both Mobile phones and Computers/Laptops, over five and half years experience in dealing with iPhones and Android devices. 
 As well as diagnosing and repairing mobile devices, i'm experienced in diagnosing and repairing both Macs and Laptops.<br>
 
 <br>Services available - 
