--- a/aboutus.html
+++ b/aboutus.html
@@ -29,17 +29,10 @@
 
 <div class="jumbotron">
 <h1>Tech T Repairs</h1>
-<p>We are Tech T Repairs, we are a small independantly run business carrying out repair & upgrade work on Laptops and Mobile phones, we offer our services in and around Buckinghamshire area. with a quick turn around time and reasonable prices!<br>
-
-<br>All our technicians are experienced in repairing and diagnosing problems with both Mobile phones and Computers/Laptops, over five and half years experience in dealing with iPhones and Android devices. 
-As well as diagnosing and repairing mobile devices, i'm experienced in diagnosing and repairing both Macs and Laptops.<br>
-
-<br>Services available - 
-<li>Screen replacement (Mobile phone or laptop)</li>
-<li>Charging port repairs</li>
-<li>Button repairs </li>
-<li>Network unlocks</li> 
-<li>Full Diagnostics</li><br>
+<p>We are Tech T Repairs, we are a small independantly run business carrying out repair & upgrade work on Laptops and Mobile phones,
+    we offer repair services in our workshop for locals of the Buckinghamshire area and we also carry out postal repairs. We offer a quick turn around time and reasonable prices that can't be beaten!<br>
+    All our technicians are fully qualified and certified in repairing and diagnosing problems with both personal devices such as mobile phones, tablets, iPods and Computers/Laptops, we have been operating for over five years. 
+    <br>
 </div>
 
 </body>
