--- a/services.html
+++ b/services.html
@@ -19,7 +19,7 @@
     </nav>
     
 <h1>Our Services</h1>
-<p>We are Tech T Repairs, we are a small independantly run business carrying out repair & upgrade work on Laptops and Mobile phones, we offer our services in and around Buckinghamshire area. with over 5 years experience, a quick turn around time and reasonably priced!<br>
+<p>We a Tech T Repairs, we are a small independantly run business carrying out repair & upgrade work on Laptops and Mobile phones, we offer our services in and around Buckinghamshire area. with over 5 years experience, a quick turn around time and reasonably priced!<br>
 
 All our technicians are experienced in repairing and diagnosing problems with both Mobile phones and Computers/Laptops, over 5 and half years experience in dealing with iPhones and Android devices. 
 As well as diagnosing and repairing mobile devices, i'm experienced in diagnosing and repairing both Macs and Laptops.<br>
